Δημιουργήθηκε με χρήση του Colab

--- a/2_dqn_pytorch_lightning.ipynb
+++ b/2_dqn_pytorch_lightning.ipynb
@@ -30,11 +30,11 @@
         "!pip install box2d pygame"
       ],
       "metadata": {
-        "id": "13ak8O9yKW0H",
-        "outputId": "ebe390ad-62c6-46f9-8220-b143abb1a887",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "13ak8O9yKW0H",
+        "outputId": "ebe390ad-62c6-46f9-8220-b143abb1a887"
       },
       "execution_count": 23,
       "outputs": [
@@ -435,7 +435,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 33,
       "metadata": {
         "id": "6KlHL-kznY3C"
       },
@@ -443,20 +443,29 @@
       "source": [
         "def create_environment(name):\n",
         "    env = gym.make(name)\n",
+        "    env.RecordVideo(env, video='./videos')\n",
         "    return env"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "env = create_environment('LunarLander-v2')"
+        "env = create_environment('LunarLander-v2')\n",
+        "\n",
+        "for episode in range(10):\n",
+        "  done = False\n",
+        "  while not done:\n",
+        "    action = env.action_space.sample()\n",
+        "    obs, reward, done, info = env.step(action)\n",
+        "    env.render()\n",
+        "  env.reset()"
       ],
       "metadata": {
-        "id": "Ob3b0psZKLQ3",
-        "outputId": "7aa7c804-9bf9-4f5e-a701-2c672acaeff8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Ob3b0psZKLQ3",
+        "outputId": "7aa7c804-9bf9-4f5e-a701-2c672acaeff8"
       },
       "execution_count": 24,
       "outputs": [
@@ -492,11 +501,11 @@
         "env.reset()"
       ],
       "metadata": {
-        "id": "xHCfBSETKLEz",
-        "outputId": "74778227-2a3b-4494-8fb3-08a8609c432f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "xHCfBSETKLEz",
+        "outputId": "74778227-2a3b-4494-8fb3-08a8609c432f"
       },
       "execution_count": 26,
       "outputs": [
@@ -510,34 +519,6 @@
           },
           "metadata": {},
           "execution_count": 26
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "env.observation_space"
-      ],
-      "metadata": {
-        "id": "697qkCLVNJNT",
-        "outputId": "e7dccb10-57ea-45f3-da38-989e8891609a",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 141
-        }
-      },
-      "execution_count": 27,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "'Box' object is not callable",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-27-44174956b428>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0menv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mobservation_space\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m: 'Box' object is not callable"
-          ]
         }
       ]
     },
